# beambuilder

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
assets/levels/: 01_first_gap.level.ron  02_wide_gap.level.ron  03_step.level.ron  04_island.level.ron  05_three_spans.level.ron  06_long_span.level.ron  07_great_crossing.level.ron  08_deep_gorge.level.ron  09_the_abyss.level.ron
src/: camera.rs  cli.rs  main.rs
src/edit/: delete.rs  draw.rs  grid.rs  history.rs  mod.rs  snap.rs
src/sim/: dynamic.rs  fem.rs  graph.rs  mod.rs  physics.rs  render.rs
src/ui/: hud.rs  mod.rs
src/world/: level.rs  mod.rs  render.rs
